[package]
name = "fc-metrics-generator"
version = "0.0.1"
authors = ["bin liu <bin@hyper.sh>"]
edition = "2018"
publish = false

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["parsing", "full", "extra-traits"] }
quote = "1.0"

[workspace]
